added default.conf and nginx.conf

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,9 +1,22 @@
-FROM debian:buster
+# FROM debian:buster
 
-COPY /Dockerfile /
+# ARG DEBIAN_FRONTEND=noninteractive
 
-ARG DEBIAN_FRONTEND=noninteractive
+# RUN apt-get -yq update \
+# && apt-get -yq install nginx \
+# && apt-get clean -y 
 
-RUN apt-get -yq update \
-&& apt-get -yq install nginx \
-&& apt-get clean -y 
+# COPY /Dockerfile /
+
+# CMD echo "Aaaaaaaaah"
+
+FROM alpine:3.14.6
+
+RUN apk update \
+	&& apk upgrade \
+	&& apk add nginx \
+	&& apk add openssl
+
+# lancer script pour parametrer ssl etc
+
+COPY /Dockerfile/conf /
