--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,15 +1,3 @@
-# FROM debian:buster
-
-# ARG DEBIAN_FRONTEND=noninteractive
-
-# RUN apt-get -yq update \
-# && apt-get -yq install nginx \
-# && apt-get clean -y 
-
-# COPY /Dockerfile /
-
-# CMD echo "Aaaaaaaaah"
-
 FROM alpine:3.14.6
 
 RUN apk update \
@@ -21,4 +9,5 @@ RUN apk update \
 
 COPY /conf /etc/nginx
 
-CMD ["nginx" ; "-g" ; "daemon off"]
+CMD ["nginx", "-g", "daemon off;"]
+# CMD [ "sh" ]
