--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,10 +3,11 @@ FROM alpine:3.14.6
 RUN apk update \
 	&& apk upgrade \
 	&& apk add nginx \
-	&& apk add openssl
-
-# lancer script pour parametrer ssl etc
+	&& apk add openssl 
 
 COPY /conf /etc/nginx
+COPY /tools/entrypoint.sh /
 
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT [ "./entrypoint.sh" ]
+
+CMD [ "nginx", "-g", "daemon off;"]
