--- a/srcs/requirements/nginx/conf/conf.d/default.conf
+++ b/srcs/requirements/nginx/conf/conf.d/default.conf
@@ -1,16 +1,12 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
-
-    #access_log  /var/log/nginx/host.access.log  main;
+    listen      	80;
+    listen  		[::]:80;
+    server_name  	inception;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
-
-    #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
     #
@@ -18,27 +14,13 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+}
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
+server {
+	listen 			443 ssl;
+    listen  		[::]:433 ssl;
+    
+	ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_certificate /etc/ssl/certs/llecoq.42.fr.crt;
+    ssl_certificate_key /etc/ssl/private/llecoq.42.fr.key;
 }
