nginx: all connections are now redirected from port 80 to port 443 with SSL certificate

--- a/srcs/requirements/nginx/conf/conf.d/default.conf
+++ b/srcs/requirements/nginx/conf/conf.d/default.conf
@@ -1,26 +1,28 @@
 server {
-    listen      	80;
+    listen      	80 default_server;
     listen  		[::]:80;
-    server_name  	inception;
+    server_name  	llecoq.42.fr;
+	return 301 https://$server_name$request_uri;
+}
 
-    location / {
+server {
+	listen 			443 ssl;
+    listen  		[::]:433 ssl;
+    server_name  	llecoq.42.fr;
+
+    ssl_certificate /etc/ssl/certs/llecoq.42.fr.crt;
+    ssl_certificate_key /etc/ssl/private/llecoq.42.fr.key;
+	ssl_protocols TLSv1.2 TLSv1.3;
+
+	location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
 
     # redirect server error pages to the static page /50x.html
     #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
-}
-
-server {
-	listen 			443 ssl;
-    listen  		[::]:433 ssl;
-    
-	ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_certificate /etc/ssl/certs/llecoq.42.fr.crt;
-    ssl_certificate_key /etc/ssl/private/llecoq.42.fr.key;
+		# error_page   500 502 503 504  /50x.html;
+		# location = /50x.html {
+		#     root   /usr/share/nginx/html;
+		# }
 }
