--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.14.6
+FROM alpine:3.15.4
 
 RUN apk update \
 	&& apk upgrade \
@@ -8,6 +8,6 @@ RUN apk update \
 COPY /conf /etc/nginx
 COPY /tools/entrypoint.sh /
 
-ENTRYPOINT [ "./entrypoint.sh" ]
+ENTRYPOINT [ "sh", "/entrypoint.sh" ]
 
 CMD [ "nginx", "-g", "daemon off;"]
