--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,3 +6,11 @@ services:
     ports:
       - 443:443
     restart: always
+ 
+  # mariadb:
+  #   build: requirements/mariadb
+  #   ports:
+  #     - 3306:3306
+  #   stdin_open: true
+  #   tty: true
+  #   # restart: always
