--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,13 +4,17 @@ services:
   nginx:
     build: requirements/nginx
     ports:
-      - 443:443
+      - 443:443    
+    env_file:
+      - .env
     restart: always
  
   mariadb:
     build: requirements/mariadb
     ports:
       - 3306:3306
+    env_file:
+      - .env
     stdin_open: true
     tty: true
     restart: always
