--- a/srcs/.env
+++ b/srcs/.env
@@ -10,5 +10,7 @@ ORGANIZATION="42 Lyon"
 ORGANIZATIONAL_UNIT=IT
 
 # Mariadb
-DB_ROOT_PASSWORD=XXXXXXXXXX
-DB_NAME=XXXXXXXXXX
+DB_ROOT_PASSWORD=XXXXX
+DB_USER_PASSWORD=XXXXX
+DB_USERNAME=mysql
+DB_NAME=Inception
