--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -15,6 +15,6 @@ services:
       - 3306:3306
     env_file:
       - .env
-    stdin_open: true
-    tty: true
     restart: always
+    # stdin_open: true
+    # tty: true
