--- a/srcs/.env
+++ b/srcs/.env
@@ -1,16 +1,16 @@
-# Domain name
+# DOMAIN NAME
 DOMAIN_NAME=llecoq.42.fr
-COMMON_NAME=$DOMAIN_NAME
 
-# Company details
+# CERTIFICATE DETAILS
+COMMON_NAME=$DOMAIN_NAME
 COUNTRY=FR
 STATE=Auvergne-Rhone-Alpes
 LOCALITY=Lyon
 ORGANIZATION="42 Lyon"
 ORGANIZATIONAL_UNIT=IT
 
-# Mariadb
+# MARIADB SETUP
+DB_NAME=Wordpress
+DB_USERNAME=mysql
 DB_ROOT_PASSWORD=XXXXX
 DB_USER_PASSWORD=XXXXX
-DB_USERNAME=mysql
-DB_NAME=Inception
