Fixed bug resulting from conflicting name used as DB_NAME

--- a/srcs/.env
+++ b/srcs/.env
@@ -10,7 +10,7 @@ ORGANIZATION="42 Lyon"
 ORGANIZATIONAL_UNIT=IT
 
 # MARIADB SETUP
-DB_NAME=Wordpress
+DB_NAME=DB
 DB_USERNAME=mysql
 DB_ROOT_PASSWORD=XXXXX
 DB_USER_PASSWORD=XXXXX
