--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '2.5'
 
 services:
+
   nginx:
     build: requirements/nginx
     container_name: nginx
@@ -8,6 +9,8 @@ services:
       - .env
     ports:
       - 443:443
+    networks:
+      - inception
     restart: always
  
   mariadb:
@@ -19,6 +22,8 @@ services:
       - 3306:3306
     volumes:
       - /home/llecoq/data/DB:/var/lib/mysql
+    networks:
+      - inception
     restart: always
 
   wordpress:
@@ -28,11 +33,16 @@ services:
       - .env
     ports:
       - 9000:9000
+    networks:
+      - inception
     stdin_open: true
     tty: true
     volumes:
       - /home/llecoq/data/wordpress:/usr/share/webapps/wordpress/
     restart: always
+
+networks:
+  inception:
 
 # volumes:
 #   db-data: 
