wordpress: in progress

--- a/srcs/.env
+++ b/srcs/.env
@@ -11,6 +11,6 @@ ORGANIZATIONAL_UNIT=IT
 
 # MARIADB SETUP
 DB_NAME=DB
-DB_USERNAME=mysql
+DB_USER=mysql
 DB_ROOT_PASSWORD=XXXXX
-DB_USER_PASSWORD=XXXXX
+DB_PASSWORD=XXXXX
