--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -11,12 +11,12 @@ RUN set -ux \
 		php7 \
 		php7-fpm \
 # install wordpress
-	&& mkdir -m 0751 -p /usr/share/webapps/ \
-	&& cd /usr/share/webapps/ \
+	&& mkdir -m 0751 -p /var/www/html/ \
+	&& cd /var/www/html/ \
 	&& wget https://wordpress.org/wordpress-6.0.tar.gz \
 	&& tar -xzvf wordpress-6.0.tar.gz \
 # set ownership and permissions as required
-	&& chown -R wordpress /usr/share/webapps/ \
+	&& chown -R wordpress /var/www/html/ \
 # remove cache and wordpress archive
 	&& rm wordpress-6.0.tar.gz \
 	&& rm /var/cache/apk/*
@@ -25,7 +25,7 @@ RUN set -ux \
 COPY /tools/docker-entrypoint.sh /
 
 # launch docker-entrypoint script that configure WordPress
-ENTRYPOINT [ "/docker-entrypoint.sh" ]
+ENTRYPOINT [ "php-fpm7", "--nodaemonize" ]
 
-# tell nginx to stay in the foreground
-# CMD [ "nginx", "-g", "daemon off;"]
+# force FastCGI Process Manager to stay in foreground, and ignore daemonize option from config file
+# CMD [ "php-fpm7", "--nodaemonize" ]
