--- a/srcs/requirements/nginx/conf/sites-available/llecoq.42.fr.conf
+++ b/srcs/requirements/nginx/conf/sites-available/llecoq.42.fr.conf
@@ -15,10 +15,25 @@ server {
     ssl_certificate_key /etc/ssl/private/llecoq.42.fr.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
 
+	root /var/www/html;
+
+	fastcgi_param REQUEST_METHOD $request_method;
+	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	fastcgi_index index.php;
+
 	location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
+		try_files $uri $uri/ /index.php?$args;
+	}
+
+	location ~ \.php$ {
+		fastcgi_pass 127.0.0.1:9000;
+	}
+
+	# location ~ \.php$ {
+	# 	include fastcgi.conf;
+	# 	fastcgi_intercept_errors on;
+	# 	fastcgi_pass php;
+	# }
 
     # redirect server error pages to the static page /50x.html
     #
