--- a/srcs/requirements/nginx/conf/sites-available/llecoq.42.fr.conf
+++ b/srcs/requirements/nginx/conf/sites-available/llecoq.42.fr.conf
@@ -1,11 +1,12 @@
-server {
-    listen      	80 default_server;
-    listen  		[::]:80;
-    server_name  	llecoq.42.fr;
+# server {
+#     listen      	80 default_server;
+#     listen  		[::]:80;
+#     server_name  	llecoq.42.fr;
 
-	return 301 https://$server_name$request_uri;
-}
+# 	return 301 https://$server_name$request_uri;
+# }
 
+# listening only throught port 443
 server {
 	listen 			443 ssl;
     listen  		[::]:443 ssl;
@@ -15,18 +16,16 @@ server {
     ssl_certificate_key /etc/ssl/private/llecoq.42.fr.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
 
-	root /var/www/html;
-
-	fastcgi_param REQUEST_METHOD $request_method;
-	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	fastcgi_index index.php;
-
-	location / {
-		try_files $uri $uri/ /index.php?$args;
-	}
-
+	root /var/www/html/;
+	index index.html index.php index.htm;
+		
 	location ~ \.php$ {
-		fastcgi_pass 127.0.0.1:9000;
+			try_files $uri =404;
+			fastcgi_pass wordpress:9000;
+			fastcgi_index index.php;
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param PATH_INFO $fastcgi_path_info;
 	}
 
 	# location ~ \.php$ {
