--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -45,8 +45,8 @@ listen = wordpress:9000
 ; and group can be specified either by name or by their numeric IDs.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-listen.owner = nginx
-listen.group = nginx
+;listen.owner = nginx
+;listen.group = nginx
 ;listen.mode = 0660
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
