--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,5 @@
+# /!\ this file should be in .gitignore to keep it confidential /!\
+
 # DOMAIN NAME
 DOMAIN_NAME=llecoq.42.fr
 
@@ -14,3 +16,4 @@ DB_NAME=DB
 DB_USER=mysql
 DB_ROOT_PASSWORD=XXXXX
 DB_PASSWORD=XXXXX
+DB_HOST=mariadb
