--- a/srcs/requirements/mariadb/conf/mariadb-server.cnf
+++ b/srcs/requirements/mariadb/conf/mariadb-server.cnf
@@ -7,7 +7,14 @@
 
 # this is only for the mysqld standalone daemon
 [mysqld]
-skip-networking
+user=mysql
+pid-file=/var/run/mysqld/mysqld.pid
+socket=/var/run/mysqld/mysqld.sock
+port=3306
+basedir=/usr
+datadir=/var/lib/mysql
+tmpdir=/tmp
+lc-messages-dir=/usr/share/mysql
 
 # Galera-related settings
 [galera]
