Makefile: included .env file

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,7 @@
 # /!\ this file should be in .gitignore to keep it confidential /!\
 
 # DOMAIN NAME
+LOGIN=llecoq
 DOMAIN_NAME=llecoq.42.fr
 
 # CERTIFICATE DETAILS
@@ -12,8 +13,8 @@ ORGANIZATION="42 Lyon"
 ORGANIZATIONAL_UNIT=IT
 
 # MARIADB SETUP
-DB_NAME=DB
+DB_NAME=wordpress
 DB_USER=mysql
-DB_ROOT_PASSWORD=XXXXX
 DB_PASSWORD=XXXXX
+DB_ROOT_PASSWORD=XXXXX
 DB_HOST=mariadb
