--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -58,10 +58,10 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /home/llecoq/data/DB/
+      device: /home/${LOGIN}/data/DB/
   WordPress:
     name: WordPress
     driver_opts: 
       type: none
       o: bind
-      device: /home/llecoq/data/WordPress/
+      device: /home/${LOGIN}/data/WordPress/
