--- a/srcs/requirements/mariadb/conf/mariadb-server.cnf
+++ b/srcs/requirements/mariadb/conf/mariadb-server.cnf
@@ -7,14 +7,14 @@
 
 # this is only for the mysqld standalone daemon
 [mysqld]
-user=mysql
-pid-file=/var/run/mysqld/mysqld.pid
-socket=/var/run/mysqld/mysqld.sock
-port=3306
-basedir=/usr
-datadir=/var/lib/mysql
-tmpdir=/tmp
-lc-messages-dir=/usr/share/mysql
+#user=mysql
+#pid-file=/var/run/mysqld/mysqld.pid
+#socket=/var/run/mysqld/mysqld.sock
+#port=3306
+#basedir=/usr
+#datadir=/var/lib/mysql
+#tmpdir=/tmp
+#lc-messages-dir=/usr/share/mysql
 
 # Galera-related settings
 [galera]
@@ -28,7 +28,7 @@ lc-messages-dir=/usr/share/mysql
 #
 # Allow server to accept connections on all interfaces.
 #
-#bind-address=0.0.0.0
+bind-address=0.0.0.0
 #
 # Optional setting
 #wsrep_slave_threads=1
