Wordpress: basic configuration OK with admin user only

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,7 @@
 # /!\ this file should be in .gitignore to keep it confidential /!\
 
-# DOMAIN NAME
+# PROJECT INFOS
+PROJECT_NAME=Inception
 LOGIN=llecoq
 DOMAIN_NAME=llecoq.42.fr
 
@@ -18,3 +19,9 @@ DB_USER=mysql
 DB_PASSWORD=XXXXX
 DB_ROOT_PASSWORD=XXXXX
 DB_HOST=mariadb
+
+# WORDPRESS SETUP
+WORDPRESS_PATH=/var/www/html
+ADMIN_USER=supervisor
+ADMIN_PASSWORD=XXXXX
+ADMIN_EMAIL=llecoq@student.42lyon.fr
