--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -16,9 +16,8 @@ RUN set -ux \
 	&& mkdir -m 0751 -p /var/lib/mysql \
 	&& chown -R mysql:mysql /var/lib/mysql
 
+# copy script needed to setup mariadb
 COPY /tools/docker-entrypoint.sh /
-
-# COPY /conf/mariadb-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 
 # launch docker-entrypoint script that will set up the database and start the mariadb daemon
 ENTRYPOINT [ "/docker-entrypoint.sh" ]
