--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -6,21 +6,21 @@ RUN set -ux \
 # update and upgrade / same as "apk -U upgrade"
 	&& apk update \
 	&& apk upgrade \
-# install php, php-fpm and php-mysql
+# install the bare minimum needed for this project (php, php-fpm and its dependencies)
 	&& apk add --no-cache \
 		php8 \
 		php8-fpm \
 		php8-mysqli \
-# install wordpress
-	&& mkdir -m 0755 -p /var/www/html/ \
-	&& cd /var/www/html/ \
-	&& wget https://wordpress.org/wordpress-6.0.tar.gz \
-	&& tar --strip-components=1 -zxf wordpress-6.0.tar.gz \
+		php8-phar \
+		php8-iconv \
+		mariadb-client \
+# symlink php8 to php
+	&& ln -s /usr/bin/php8 /usr/bin/php \
 # set ownership and permissions as required
+	&& mkdir -m 0751 -p /var/www/html/ \
 	&& chown -R wordpress:wordpress /var/www/* \
 	&& chown -R wordpress:wordpress /var/lib/php8 \
-# remove cache and wordpress archive
-	&& rm wordpress-6.0.tar.gz \
+# remove cache
 	&& rm /var/cache/apk/*
 
 COPY /conf/www.conf /etc/php8/php-fpm.d/
@@ -28,8 +28,8 @@ COPY /conf/www.conf /etc/php8/php-fpm.d/
 COPY /tools/docker-entrypoint.sh /
 
 # launch docker-entrypoint script that configure WordPress
-# ENTRYPOINT [ "/docker-entrypoint.sh" ]
-ENTRYPOINT [ "php-fpm8", "--nodaemonize" ]
+ENTRYPOINT [ "/docker-entrypoint.sh" ]
+# ENTRYPOINT [ "php-fpm8", "--nodaemonize" ]
 
 # force FastCGI Process Manager to stay in foreground, and ignore daemonize option from config file
-# CMD [ "php-fpm8", "--nodaemonize" ]
+CMD [ "php-fpm8", "--nodaemonize" ]
