Wordpress && mariadb: Minor changes to the scripts for better clarity

--- a/srcs/.env
+++ b/srcs/.env
@@ -25,3 +25,6 @@ WORDPRESS_PATH=/var/www/html
 ADMIN_USER=supervisor
 ADMIN_PASSWORD=XXXXX
 ADMIN_EMAIL=llecoq@student.42lyon.fr
+
+# NGINX SETUP
+NGINX_PATH=$WORDPRESS_PATH
