--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks:
       - inception
     volumes:
-      - WordPress:/var/www/html
+      - WordPress:${NGINX_PATH}
     depends_on:
       - wordpress
     restart: always
@@ -40,7 +40,7 @@ services:
     networks:
       - inception
     volumes:
-      - WordPress:/var/www/html
+      - WordPress:${WORDPRESS_PATH}
     depends_on:
       - mariadb
     restart: always
