wordress: security modification in the entrypoint script

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,4 @@
-# /!\ this file should be in .gitignore to keep it confidential /!\
+# /!\ this file should be in the .gitignore file to keep its content confidential /!\
 
 # PROJECT INFOS
 PROJECT_NAME=Inception
