Wordpress: running and configured like asked in the subject with two users

--- a/srcs/.env
+++ b/srcs/.env
@@ -25,6 +25,10 @@ WORDPRESS_PATH=/var/www/html
 ADMIN_USER=supervisor
 ADMIN_PASSWORD=XXXXX
 ADMIN_EMAIL=llecoq@student.42lyon.fr
+WORDPRESS_USER=Michel
+WORDPRESS_USER_PASSWORD=XXXXX
+WORDPRESS_USER_EMAIL=michelvaillant@msn.com
+WORDPRESS_USER_ROLE=author
 
 # NGINX SETUP
 NGINX_PATH=$WORDPRESS_PATH
