--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -14,12 +14,20 @@ RUN set -ux \
 		php8-phar \
 		php8-iconv \
 		mariadb-client \
+# download wp-cli command line tool for interacting with and managing WordPress sites.
+		&& echo "Downloading WordPress command line tool..." \
+		&& wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+# make it an executable file and move it to the local /bin
+		&& chmod +x wp-cli.phar \
+		&& mv wp-cli.phar /usr/local/bin/wp \
+		&& echo "... wp-cli is ready to use !" \
 # symlink php8 to php
 	&& ln -s /usr/bin/php8 /usr/bin/php \
 # set ownership and permissions as required
 	&& mkdir -m 0751 -p /var/www/html/ \
 	&& chown -R wordpress:wordpress /var/www/html \
 	&& chown -R wordpress:wordpress /var/lib/php8 \
+	&& chown -R wordpress:wordpress /var/log/php8 \
 # remove cache
 	&& rm /var/cache/apk/*
 
